@@ -22,13 +22,13 @@ export LC_ALL=en_US.UTF-8
 export EDITOR='nvim'
 export STOW_DIR=$HOME/.dotfiles
 
-if [[ -d "/usr/lib/jvm/java-11-openjdk" ]]; then
-  export JAVA_HOME="/usr/lib/jvm/java-11-openjdk"
+if [[ -d "/usr/lib/jvm/java-10-openjdk" ]]; then
+  export JAVA_HOME="/usr/lib/jvm/java-10-openjdk"
+  export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 fi
 
 if [[ "$os" == "Ubuntu" ]]; then
   source /usr/share/doc/fzf/examples/key-bindings.zsh
-
 fi
 
 if [[ "$os" == "\"Manjaro Linux\"" ]]; then
